@@ -24,7 +24,7 @@
 			<p>
 			You can retreive old month records by running SMASpot with commandline parameter -v -amXX,<br>
 			where XX is the amount of months you would like to retreive, for example:<br>
-			<b>./SMASpot -v -am12</b> , this will retreive up to 12 months from now.<br><br>
+			<b>./SMASpot -v -am12</b> , this will retreive up to 2 years from now.<br><br>
 			This process can take a while, when pressing the above button, please wait until the dashboard is shown again!.
 			</p>
 			<input type="hidden" id="idx" name="idx" value="-1">
