@@ -51,8 +51,9 @@ Version 1.0.xxxx (April xxth 2014)
 - Changed: LaCrosse WS2300 Wind sensor does not report speed, now setting speed=gust
 - Implemented: Option for Dummy device to create Gas Sensor
 - Updated: OpenZWave library
-- Implemented: Option for SMASpot device to import old month data
+- Implemented: Option for SMASpot device to import old month data (SMASpot month files)
 - Implemented: Sensor type CM119/160 can now display previous year data
+- Implemented: Option for SMASpot device to import old month data (SMASpot website export)
 
 Version 1.0.1680 (April 21th 2014)
 - Implemented: Support for Forecast.io
